Add rules to style.css and fix attributes for <p> and <div> elements in index.html

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -3,3 +3,18 @@
   font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
+#blue-text {
+    color: rgb(0, 0, 255);
+    font-size: 36px;
+}
+
+.class-text#cool {
+   font-size: 24px; 
+   font-weight: 700;
+}
+
+#green-text {
+    background-color: #90ee90;
+    font-size: 24px;
+    font-weight: 700;
+}
