--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -22,7 +22,6 @@ body {
   width: 48px;
   height: 48px;
   margin: 8px;
-  display: flex;
   align-items: center;
 }
 
@@ -31,8 +30,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  display: flex;
   align-items: center;
+  margin: 8px;
 }
 
 button {
@@ -41,8 +40,9 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px;
-  display: flex;
   margin-left: auto;
+  align-self: center;
+  
 }
 
 a {
@@ -54,5 +54,11 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 8px;
+  align-items: center;
   justify-content: space-between;
+  justify-content: flex-start;
+  
 }
+
+
