Add rules to style.css for 03-flex-header, add rules to style.css

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,6 +13,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  justify-content: space-between;
 }
 
 .right-prof {
@@ -54,10 +55,10 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  margin: 8px;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
   align-items: center;
-  justify-content: space-between;
-  justify-content: flex-start;
   
 }
 
