--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  margin: 52px;
+  text-align: center;
 }
 
 img {
@@ -11,24 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
-  margin: 32px;
+  margin-bottom: 32px;
 }
 
-.redplants,
-.purpleplants {
-  display: flex;
-  flex-direction: row;
+.info {
+  max-width: 200px;
 }
 
 .outer-container {
 display: flex;
-}
-
-.text {
-  display: flex;
-  align-self: flex-end;
+justify-content: center;
+gap: 52px;
 }
 
 /* do not edit this footer */
