Add all css rules to style.css

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -19,9 +19,13 @@ img {
 }
 
 .outer-container {
-display: flex;
-justify-content: center;
-gap: 52px;
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.text {
+  flex-wrap: wrap;
 }
 
 /* do not edit this footer */
