--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   padding: 10px;
+  display:flex;
 }
 
 .icon {
@@ -31,11 +32,11 @@ body {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+  margin: 10px;
   display: flex;
-  align-items: center;
+  flex-shrink: 0;
   justify-content: center;
-  margin: 8px;
-
+  align-items: center;
 }
 
 .close-button {
@@ -50,8 +51,9 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
-  padding: 0;
   margin-left: auto;
+  padding: 0;
+  align-self: flex-start;
 }
 
 button {
@@ -65,6 +67,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-left: 8px;
 }
 
 button.cancel {
@@ -74,12 +77,14 @@ button.cancel {
 }
 
 .header {
-  display: flex;
-  font-weight: 800px;
+  font-weight: 700;
   font-size: 20px;
-  align-items: baseline;
+  margin-left: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.container2 {
-  align-self: flex-end;
+.text {
+  margin-left: 8px;
 }
