Add all required rules to style.css

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,78 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
   min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+}
+
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  width: 100%;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  bottom: 0;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+  display: flex;
+  flex-shrink: 0;
+  font-size: 24px;
+  color: white;
+  position: absolute;
+  top: 104px;
+  height: 100vh;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.card-section {
+  padding: 32px;
+  display: grid;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 104px;
+  left: 350px;
+  gap: 20px;
+  grid-template-columns: 350px 350px 350px;
+  grid-template-rows: 350px 350px 350px;
+  height: 100vh;
+  top: 104px;
 }
